--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ bidict==0.23.1
 blinker==1.9.0
 click==8.1.7
 Flask==3.1.0
+Flask-Cors==5.0.0
 Flask-SocketIO==5.4.1
 h11==0.14.0
 importlib_metadata==8.5.0
